[gd_scene load_steps=34 format=3 uid="uid://q88x6y11n1jm"]

[ext_resource type="Script" path="res://scenes/playground/PlaygroundUI.gd" id="1_ioibl"]
[ext_resource type="Texture2D" uid="uid://bg82qawkt7a6b" path="res://assets/gui/center_background.png" id="2_sdntq"]
[ext_resource type="PackedScene" uid="uid://c8n70cda0ljy7" path="res://scenes/other-options/OtherOptions.tscn" id="4_co8v3"]
[ext_resource type="Texture2D" uid="uid://c0ikmcsba2msv" path="res://assets/gui/playground_buttons.png" id="4_fd4oq"]
[ext_resource type="PackedScene" uid="uid://cnh2ciowfjn42" path="res://scenes/playground/Playground.tscn" id="4_xpdbu"]
[ext_resource type="PackedScene" uid="uid://ci4h23rvdej3t" path="res://scenes/advanced-options/GeometricOptions.tscn" id="4_yd3uv"]
[ext_resource type="PackedScene" uid="uid://co7ekdte8fr1f" path="res://scenes/presets/Presets.tscn" id="5_jja2r"]
[ext_resource type="PackedScene" uid="uid://bdcy8qeketbv2" path="res://scenes/advanced-options/MatrixOptions.tscn" id="5_nxfo1"]
[ext_resource type="PackedScene" uid="uid://mtu0mxcjwc41" path="res://scenes/color-options/ColorSliders.tscn" id="8_aj8ad"]

[sub_resource type="InputEventKey" id="InputEventKey_6slxs"]
device = -1
keycode = 65
unicode = 97

[sub_resource type="InputEventKey" id="InputEventKey_06eut"]
device = -1
keycode = 43
unicode = 43

[sub_resource type="Shortcut" id="Shortcut_pboob"]
events = [SubResource("InputEventKey_6slxs"), SubResource("InputEventKey_06eut")]

[sub_resource type="AtlasTexture" id="AtlasTexture_y2edm"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l22sp"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5vrq"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lulrn"]
atlas = ExtResource("4_fd4oq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_1kcjd"]
device = -1
keycode = 67
unicode = 99

[sub_resource type="Shortcut" id="Shortcut_jhmuf"]
events = [SubResource("InputEventKey_1kcjd")]

[sub_resource type="AtlasTexture" id="AtlasTexture_l4f0q"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u86y8"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvvj1"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e6k8"]
atlas = ExtResource("4_fd4oq")
region = Rect2(96, 64, 32, 32)

[sub_resource type="InputEventKey" id="InputEventKey_ptcdk"]
device = -1
keycode = 4194305

[sub_resource type="InputEventKey" id="InputEventKey_4mcv5"]
device = -1
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_5hmfe"]
events = [SubResource("InputEventKey_ptcdk"), SubResource("InputEventKey_4mcv5")]

[sub_resource type="AtlasTexture" id="AtlasTexture_n5pe3"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbxom"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv145"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nfob"]
atlas = ExtResource("4_fd4oq")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bytrw"]
atlas = ExtResource("4_fd4oq")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xys4"]
atlas = ExtResource("4_fd4oq")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mc7g"]
atlas = ExtResource("4_fd4oq")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxlht"]
atlas = ExtResource("4_fd4oq")
region = Rect2(96, 128, 32, 32)

[node name="PlaygroundUI" type="MarginContainer"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
script = ExtResource("1_ioibl")

[node name="Playground" parent="." instance=ExtResource("4_xpdbu")]

[node name="Left" type="MarginContainer" parent="."]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2

[node name="Main" type="VBoxContainer" parent="Left"]
layout_mode = 2
mouse_filter = 2

[node name="AddButton" type="TextureButton" parent="Left/Main"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "add new rectangle"
shortcut = SubResource("Shortcut_pboob")
texture_normal = SubResource("AtlasTexture_y2edm")
texture_pressed = SubResource("AtlasTexture_l22sp")
texture_hover = SubResource("AtlasTexture_e5vrq")
texture_disabled = SubResource("AtlasTexture_lulrn")

[node name="ColorButton" type="TextureButton" parent="Left/Main"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "change color of selected rectangle"
shortcut = SubResource("Shortcut_jhmuf")
texture_normal = SubResource("AtlasTexture_l4f0q")
texture_pressed = SubResource("AtlasTexture_u86y8")
texture_hover = SubResource("AtlasTexture_nvvj1")
texture_disabled = SubResource("AtlasTexture_0e6k8")

[node name="RemoveButton" type="TextureButton" parent="Left/Main"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "delete selected rectangle"
shortcut = SubResource("Shortcut_5hmfe")
texture_normal = SubResource("AtlasTexture_n5pe3")
texture_pressed = SubResource("AtlasTexture_jbxom")
texture_hover = SubResource("AtlasTexture_vv145")
texture_disabled = SubResource("AtlasTexture_0nfob")

[node name="CloseAllButton" type="TextureButton" parent="Left/Main"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "delete all rectangles"
texture_normal = SubResource("AtlasTexture_bytrw")
texture_pressed = SubResource("AtlasTexture_1xys4")
texture_hover = SubResource("AtlasTexture_6mc7g")
texture_disabled = SubResource("AtlasTexture_mxlht")

[node name="OtherOptions" parent="Left/Main" instance=ExtResource("4_co8v3")]
layout_mode = 2

[node name="Right" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Center" type="MarginContainer" parent="Right"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Frame" type="NinePatchRect" parent="Right/Center"]
layout_mode = 2
texture = ExtResource("2_sdntq")
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="Center" type="MarginContainer" parent="Right/Center"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="BlueTexture" type="TextureRect" parent="Right/Center/Center"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
mouse_filter = 2

[node name="Bottom" type="MarginContainer" parent="Right"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="Main" type="HBoxContainer" parent="Right/Bottom"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="PresetsButton" type="Button" parent="Right/Bottom/Main"]
layout_mode = 2
tooltip_text = "choose fractal from a preset"
text = "Presets"
alignment = 2

[node name="Presets" parent="." instance=ExtResource("5_jja2r")]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="ColorSliders" parent="." instance=ExtResource("8_aj8ad")]
visible = false
layout_mode = 2
size_flags_vertical = 8

[node name="GeometricOptions" parent="." instance=ExtResource("4_yd3uv")]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="MatrixOptions" parent="." instance=ExtResource("5_nxfo1")]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="PresetTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="defocus" from="Playground" to="." method="_on_playground_defocus"]
[connection signal="focus_this" from="Playground" to="." method="_on_playground_focus_this"]
[connection signal="fractal_changed_vastly" from="Playground" to="." method="_on_playground_fractal_changed_vastly"]
[connection signal="start_editing_position" from="Playground" to="." method="_on_playground_start_editing_position"]
[connection signal="pressed" from="Left/Main/AddButton" to="." method="_on_add_pressed"]
[connection signal="pressed" from="Left/Main/ColorButton" to="." method="_on_color_button_pressed"]
[connection signal="pressed" from="Left/Main/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="Left/Main/CloseAllButton" to="." method="_on_close_all_pressed"]
[connection signal="break_all" from="Left/Main/OtherOptions" to="." method="_on_other_options_break_all"]
[connection signal="break_focused" from="Left/Main/OtherOptions" to="." method="_on_other_options_break_focused"]
[connection signal="center_all" from="Left/Main/OtherOptions" to="." method="_on_other_options_center_all"]
[connection signal="center_x" from="Left/Main/OtherOptions" to="." method="_on_other_options_center_x"]
[connection signal="center_y" from="Left/Main/OtherOptions" to="." method="_on_other_options_center_y"]
[connection signal="duplicate" from="Left/Main/OtherOptions" to="." method="_on_other_options_duplicate"]
[connection signal="mirror_x" from="Left/Main/OtherOptions" to="." method="_on_other_options_mirror_x"]
[connection signal="mirror_y" from="Left/Main/OtherOptions" to="." method="_on_other_options_mirror_y"]
[connection signal="open_geometric_options" from="Left/Main/OtherOptions" to="." method="_on_other_options_open_geometric_options"]
[connection signal="open_matrix_options" from="Left/Main/OtherOptions" to="." method="_on_other_options_open_matrix_options"]
[connection signal="open_txt_options" from="Left/Main/OtherOptions" to="." method="_on_other_options_open_txt_options"]
[connection signal="opened" from="Left/Main/OtherOptions" to="." method="_on_other_options_opened"]
[connection signal="rotate_45" from="Left/Main/OtherOptions" to="." method="_on_other_options_rotate_45"]
[connection signal="pressed" from="Right/Bottom/Main/PresetsButton" to="." method="_on_presets_button_pressed"]
[connection signal="close_me" from="Presets" to="." method="_on_presets_close_me"]
[connection signal="load_preset" from="Presets" to="." method="_on_presets_load_preset"]
[connection signal="color_changed" from="ColorSliders" to="." method="_on_color_sliders_color_changed"]
[connection signal="color_changed_vastly" from="ColorSliders" to="." method="_on_color_sliders_color_changed_vastly"]
[connection signal="finished" from="ColorSliders" to="." method="_on_color_sliders_finished"]
[connection signal="c_x_changed" from="GeometricOptions" to="." method="_on_geometric_options_c_x_changed"]
[connection signal="c_y_changed" from="GeometricOptions" to="." method="_on_geometric_options_c_y_changed"]
[connection signal="close_me" from="GeometricOptions" to="." method="_on_advanced_options_close_me"]
[connection signal="mirror_changed" from="GeometricOptions" to="." method="_on_geometric_options_mirror_changed"]
[connection signal="rot_changed" from="GeometricOptions" to="." method="_on_geometric_options_rot_changed"]
[connection signal="switch" from="GeometricOptions" to="." method="_on_advanced_options_switch"]
[connection signal="t_x_changed" from="GeometricOptions" to="." method="_on_geometric_options_t_x_changed"]
[connection signal="t_y_changed" from="GeometricOptions" to="." method="_on_geometric_options_t_y_changed"]
[connection signal="close_me" from="MatrixOptions" to="." method="_on_matrix_options_close_me"]
[connection signal="switch" from="MatrixOptions" to="." method="_on_matrix_options_switch"]
[connection signal="value_changed" from="MatrixOptions" to="." method="_on_matrix_options_value_changed"]
[connection signal="timeout" from="PresetTimer" to="." method="_on_preset_timer_timeout"]
